jwt(auth): initial log out endpoint